--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -227,7 +227,7 @@
                                                         <td></td>
                                                         <td></td>
                                                         <td>{{this.totalAmount}}</td>
-                                                        <td></td>
+                                                        <td>{{this.totalAddlDiscount}}</td>
                                                         <td>{{this.totalPaid}}</td>
                                                         <td>{{this.totalBalance}}</td>
                                                         <td></td>
