--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -833,7 +833,7 @@
                                                         <td></td>
                                                         <td></td>
                                                         <td></td>
-                                                        <td></td>
+                                                        <td>{{this.ServicetotalSUBTOTAL}}</td>
                                                         <td></td>
                                                         <td></td>
                                                         <td style="display:none"></td>
